--- a/src/app/components/body/home/home.component.scss
+++ b/src/app/components/body/home/home.component.scss
@@ -155,7 +155,8 @@
         padding: 16px;
         box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.11);
         border-radius: 10px;
-        overflow: auto;
+        overflow: hidden;
+
 
       .header{
         padding-bottom: 8px;
