--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,7 +7,6 @@
 	margin: 0;
 	box-sizing: border-box;
 	font-family:'Roboto', Times, serif ,sans-serif;
-    overflow: hidden;
 }
 
 
